# simple_classification

./: .gitignore  create_dataset_splits.py  grad_cam.py  main.py  pyproject.toml  run_main.sh  test.py
model/: classifier.py  convnext_isotropic.py  dataloader.py  efficientnet_config.py  efficientnet_v2.py
